# oqs-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build-liboqs.sh  build-static.sh
mullvad-wg-establish-psk/: Cargo.toml  README.md  build-static.sh
mullvad-wg-establish-psk/src/: client.rs
mullvad-wg-establish-psk/src/server/: cli.rs  main.rs
mvd-wg-psk/: Cargo.toml
mvd-wg-psk/src/: main.rs
oqs/: CHANGELOG.md  Cargo.toml  README.md
oqs-kex-rpc/: CHANGELOG.md  Cargo.toml  README.md
oqs-kex-rpc/src/: lib.rs  server.rs
oqs-kex-rpc/src/client/: mod.rs  rpc.rs
oqs-kex-rpc/src/server/: rpc.rs
oqs-kex-rpc/tests/: localhost.rs
oqs-sys/: CHANGELOG.md  Cargo.toml  README.md  build-liboqs.sh  build.rs
oqs-sys/src/: lib.rs
oqs/benches/: kex.rs  rand.rs
oqs/src/: buf.rs  kex.rs  lib.rs  rand.rs
oqs/tests/: serialize.rs
wireguard-establish-psk/: Cargo.toml  README.md  build-static.sh
wireguard-establish-psk/src/: client.rs
wireguard-establish-psk/src/server/: cli.rs  main.rs  wg.rs
wireguard-psk-exchange/: Cargo.toml
wireguard-psk-exchange/src/: client.rs  lib.rs  main.rs
wireguard-psk-exchange/src/server/: main.rs  wg.rs
