[package]
name = "oqs-kex-rpc"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <faern@faern.net>", "Odd Stranne <odd@mullvad.net>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "JSON-RPC 2.0 server and client using liboqs for doing key exchange"
keywords = ["post-quantum", "liboqs", "kex", "key-exchange", "json-rpc"]
categories = ["cryptography", "network-programming", "web-programming::http-client", "web-programming::http-server"]

[dependencies]
error-chain = "0.11"
oqs = { path = "../oqs", features = ["serde"] }
jsonrpc-client-core = "0.2"
jsonrpc-client-http = "0.2"
jsonrpc-core = "7.1.1"
jsonrpc-macros = "7.1.1"
jsonrpc-http-server = "7.1.1"
futures = "0.1"
log = "0.3"

[dev-dependencies]
lazy_static = "0.2"
