[package]
name = "oqs"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <faern@faern.net>", "Odd Stranne <odd@mullvad.net>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Bindings for Open Quantum Safe, a library for quantum-resistant cryptographic algorithms."
keywords = ["post-quantum", "rng", "kex", "liboqs", "key-exchange"]
categories = ["algorithms", "api-bindings", "cryptography"]

[dependencies]
oqs-sys = { path = "../oqs-sys" }
libc = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

