[package]
name = "wireguard-psk-exchange"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>", "Linus Färnstrand <faern@faern.net>", "Odd Stranne <odd@mullvad.net>"]
license = "MIT/Apache-2.0"
description = "Post-quantum safe client for generating PSK inside a WireGuard tunnel"
keywords = ["post-quantum", "liboqs", "kex", "key-exchange", "wireguard"]
categories = ["cryptography", "network-programming"]

[dependencies]
env_logger = "0.4"
error-chain = "0.11"
oqs-kex-rpc = { path = "../oqs-kex-rpc" }
base64 = "0.7"
sha2 = "0.6"
clap = "2.26"


[[bin]]
name = "wg-psk-exchange-server"
path = "src/server/main.rs"

[[bin]]
name = "wg-psk-exchange-client"
path = "src/client.rs"
